Change requests.https with the correct bearer token